--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<!DOCTYPE html>
-<!-- This index.html just redirects to /build/index.html -->
-<meta http-equiv="refresh" content="0; url=https://simurgh9.github.io/fractalsetc/build/index.html">
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/fractalsetc/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="Fractals Et Cetera" content="Interactive Fractals and other mathematical figures."/><link rel="apple-touch-icon" href="logo192.png"/><link rel="manifest" href="/fractalsetc/manifest.json"/><title>Fractals Et Cetera</title><script defer="defer" src="/fractalsetc/static/js/main.1a402c53.js"></script><link href="/fractalsetc/static/css/main.42efe9ec.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
