corrected capitalisation in the meta content.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#1E1E1E" />
     <meta
       name="Fractals Et Cetera"
-      content="Interactive Fractals and other mathematical figures."
+      content="Interactive fractals and other mathematical figures."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
